Pushing with new files and daily updates

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 	<title>Chris Kelsey - Full Stack Developer</title>
 	<meta charset="utf-8">
-	<link href="https://fonts.googleapis.com/css?family=Tinos:700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -31,7 +30,7 @@
 	</main>
 	<footer>
 		<section>
-			<p>&copy; Copyright Chris Kelsey 2018</p>
+			<p>Copyright &copy; Chris Kelsey 2018</p>
 		</section>
 	</footer>
 </body>
