Final push for assignment checkin

--- a/contact.html
+++ b/contact.html
@@ -22,14 +22,14 @@
 	<main>
 		<section>
 			<h1>Contact</h1>
-			<form action="post">
+			<form action="">
 				<label for="name">Name</label>
 				<input id="name" type="text" name="name" placeholder="John Smith">
 				<label for="email">Email</label>
 				<input id="email" type="text" name="email" placeholder="example@gmail.com">
 				<label for="message">Message</label>
 				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<button>Submit</button>
+				<button type="submit" value="Submit">Submit</button>
 			</form>
 		</section>
 	</main>
